bin_PROGRAMS = ss_Client
ss_Client_SOURCES=main.cpp global.cpp arg_parser/carg_parser.cpp udp/udp_port.cpp \
			       myTypes.cpp myTypes.h console_out.cpp console_out.h\
		               global.h arg_parser/carg_parser.h udp/udp_port.h\
		               menuParam.cpp menuParam.h\
		               menuString.cpp menuString.h\
		               menuInit.cpp menuInit.h\
		               udpAction.cpp udpAction.h\
		               buffer/ssBuffer.h buffer/ssBuffer.cpp\
		               ssCmd/cmd.h ssCmd/cmd.cpp\
		               crc16.h crc16.cpp
		               
		               
ss_Client_LDFLAGS=-pthread



