bin_PROGRAMS = ss_Client
ss_Client_SOURCES=main.cpp global.cpp arg_parser/carg_parser.cpp\
				console_out.cpp console_out.h\
				global.h arg_parser/carg_parser.h \
				menuParam.cpp menuParam.h\
				menuString.cpp menuString.h\
				menuInit.cpp menuInit.h\
				../../rcsLib/udpAction/udpAction.cpp\
				../../rcsLib/udpAction/udpAction.h\
				../../rcsLib/rcsCmd/rcsCmd.cpp\
				../../rcsLib/rcsCmd/rcsCmd.h\
				../../rcsLib/ortsTypes/ortsTypes.cpp\
				../../rcsLib/ortsTypes/ortsTypes.h\
				../../rcsLib/udp_port/udp_port.cpp\
				../../rcsLib/udp_port/udp_port.h\
				../../rcsLib/crc/crc16.cpp\
				../../rcsLib/crc/crc16.h
		               
ss_Client_LDFLAGS=-pthread



